--- a/Day 2/Bai 6/style6.css
+++ b/Day 2/Bai 6/style6.css
@@ -10,6 +10,16 @@ h1 {
     font-size: 50px;
 }
 
+.cityname {
+    color: red;
+    font-weight: bold;
+}
+
+.highlight {
+    background-color: yellow;
+    font-style: italic;
+}
+
 #second-part {
     background-color: orange;
     text-align: right;
